--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
 
         .game-btn-container {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
             margin-top: 30px;
             margin-bottom: 20px;
         }
@@ -460,6 +462,12 @@
                         <path d="M2 12l10 5 10-5"></path>
                     </svg>
                     BULK RAMPAGE
+                </a>
+                <a href="bulk-runner.html" class="game-btn">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"></path>
+                    </svg>
+                    BULK RUNNER
                 </a>
             </div>
 
