Revert to using original bulk.glb - rigged model not working

--- a/bulk-runner.html
+++ b/bulk-runner.html
@@ -435,7 +435,7 @@
                 }
                 
                 const loader = new THREE.GLTFLoader();
-                loader.load('rigged_bulk.glb', 
+                loader.load('bulk.glb', 
                     (gltf) => {
                         console.log('GLB loaded!');
                         const model = gltf.scene;
