--- a/flappy-bulk.html
+++ b/flappy-bulk.html
@@ -689,7 +689,7 @@
                 }
 
                 const loader = new THREE.GLTFLoader();
-                loader.load('rigged_bulk.glb',
+                loader.load('bulk.glb',
                     (gltf) => {
                         console.log('GLB loaded successfully!');
                         bulkModel = gltf.scene;
