--- a/the-amazing-bulk-game.html
+++ b/the-amazing-bulk-game.html
@@ -1422,10 +1422,10 @@
                 
                 try {
                     const loader = new THREE.GLTFLoader();
-                    console.log('Attempting to load rigged_bulk.glb...');
+                    console.log('Attempting to load bulk.glb...');
 
                     loader.load(
-                        'rigged_bulk.glb',
+                        'bulk.glb',
                         (gltf) => {
                             console.log('GLB loaded successfully!', gltf);
                             
