Fix mobile layout: reduce scene height, move achievements to bottom

--- a/bulkagachi.html
+++ b/bulkagachi.html
@@ -223,6 +223,11 @@
                 border-radius: 20px;
             }
 
+            #scene-container {
+                flex: 0 0 50vh;
+                max-height: 50vh;
+            }
+
             #title {
                 padding: 8px;
                 font-size: clamp(0.6rem, 3vw, 0.9rem);
@@ -246,6 +251,12 @@
             .action-btn {
                 padding: 8px 4px;
                 font-size: clamp(0.35rem, 1.8vw, 0.5rem);
+            }
+
+            #achievements-btn {
+                top: auto !important;
+                bottom: 10px !important;
+                right: 10px !important;
             }
         }
 
