Fix achievements button overlap with fortune cookie on mobile

--- a/bulkagachi.html
+++ b/bulkagachi.html
@@ -255,8 +255,9 @@
 
             #achievements-btn {
                 top: auto !important;
-                bottom: 10px !important;
-                right: 10px !important;
+                bottom: 70px !important;
+                left: 10px !important;
+                right: auto !important;
             }
         }
 
