--- a/bulk-runner.html
+++ b/bulk-runner.html
@@ -436,9 +436,14 @@
                 }
                 
                 const loader = new THREE.GLTFLoader();
-                loader.load('bulk.glb',
+                loader.load('rigged_bulk.glb',
                     (gltf) => {
                         console.log('GLB loaded!');
+                        console.log('Animations found:', gltf.animations.length);
+                        if (gltf.animations.length > 0) {
+                            console.log('Animation names:', gltf.animations.map(a => a.name));
+                        }
+
                         const model = gltf.scene;
 
                         // Scale based on bounding box
@@ -463,11 +468,22 @@
                             }
                         });
 
+                        // Setup animation if it exists
+                        if (gltf.animations && gltf.animations.length > 0) {
+                            mixer = new THREE.AnimationMixer(model);
+                            // Play all animations or find a running animation
+                            gltf.animations.forEach((clip, i) => {
+                                const action = mixer.clipAction(clip);
+                                action.play();
+                                console.log(`Playing animation ${i}: ${clip.name}`);
+                            });
+                        }
+
                         bulk.add(model);
                     },
                     undefined,
                     (error) => {
-                        console.log('GLB failed, using fallback');
+                        console.log('GLB failed, using fallback. Error:', error);
                         createFallbackBulk();
                     }
                 );
